
Jun 08 - 1.43

fixed sfx0 using a real sound and thus "hiding" it

corrected sv_pure back to CVAR_ROM

added the correct "fastsky!=0 == disable portals" test, ffs me  :P

removed long-obsoleted r_lastValidRenderer

removed r_rail* and marked the never-used RT_BEAM etc as such

removed RAVENMD4 completely

fixed distance culling on dlit patch seams

changed r_ext_max_anisotropy default to 16

made the console font scale properly

another MASSIVE overhaul of the sound code:

removed s_doppler, it's "right", but it just sounds like shit

removed s_mixprestep, a stupid hack to work around another stupid hack

spatialisation is now correct, which has two huge impacts:
  you can "place" sounds MUCH more accurately than before,
  but as a result, distant sounds are MUCH quieter

the defective OAL stuff we inherited has been nuked completely
i'm never going to fix it, and i'm tired of it poisoning the codebase


Mar 08 - 1.42

bots are no longer kicked by devmap

legacy cack like joystick/midi support only pollutes configs if enabled

fixed a memory leak in the sound code

fixed even more (hopefully all) dropped sound issues in snd_dma

made com_soundmegs SLIGHTLY less broken: now only 2x instead of 3x  :P
note that "soundmegs" are taken FROM THE HUNK now to fix the leak
so you need to increase com_hunkmegs by 2x your com_soundmegs

removed the explicit and incorrect "fastsky==1 == disable portals" test

r_noportals is not a cheat var

hyperspace is a bit less annoying

purged the unused (never finished) idMD4 model code

fixed some bugs in referencedpak list generation

fixed roqs ignoring s_volume

fixed widescreen modes crashing on listen servers

fixed downloads not completing properly


18 Feb 08 - 1.41

removed all bs references to GT_SINGLE_PLAYER and ui_singlePlayerActive
(except from the bot code, which has bigger problems)
added sv_singleplayer

improved TTF overhead a lot: now as fast as crappy bitmap fonts  :D
